cluster-backup/notes-app-ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"notes-app-ingress","namespace":"notes-app"},"spec":{"ingressClassName":"nginx","rules":[{"host":"notes.local","http":{"paths":[{"backend":{"service":{"name":"backend","port":{"number":5000}}},"path":"/api","pathType":"Prefix"},{"backend":{"service":{"name":"frontend","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
    creationTimestamp: "2026-09-05T17:40:30Z"
    generation: 1
    name: notes-app-ingress
    namespace: notes-app
    resourceVersion: "927983"
    uid: e3da5c71-659d-458c-8e35-1dfada2a0a5b
  spec:
    ingressClassName: nginx
    rules:
    - host: notes.local
      http:
        paths:
        - backend:
            service:
              name: backend
              port:
                number: 5000
          path: /api
          pathType: Prefix
        - backend:
            service:
              name: frontend
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - hostname: localhost
kind: List
metadata:
  resourceVersion: ""
